* Trying to understand this code, thus adding documentation to all methods, reordered methods * Fixed bug where switching the text filters looses the new added content from the visual editor * Don't show scrollbars in the iframe - we have autoscrolling * Remove javascript error with unknown starteffect * when saving the page (unboot all wym), unboot each editor and convert/fix the content so no content will be lost * Use intervals instead of timeouts for auto resizing, they're faster * Adding todo hints for further ideas

--- a/public/wymeditor/wymeditor/iframe/radiant/wymiframe.css
+++ b/public/wymeditor/wymeditor/iframe/radiant/wymiframe.css
@@ -20,6 +20,8 @@
  *        Michael Kessler (michi a-t netzpiraten dotch)
 */
 
+  html { overflow: hidden; }
+
 /* VISUAL FEEDBACK */
 
 /* basic */
